--- a/_posts/2023-01-09-c2编译线程崩溃案例分析.markdown
+++ b/_posts/2023-01-09-c2编译线程崩溃案例分析.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "记一次jvm c2编译线程崩溃分析"
+title:  "c2编译线程崩溃案例分析"
 date:   2023-01-09 10:22:07 +0800
 categories: jekyll
 tags: jvm c2编译
