--- a/_posts/2022-12-04-java应用的可观测性.markdown
+++ b/_posts/2022-12-04-java应用的可观测性.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "java应用的可观测性"
 date:   2022-12-04 02:56:07 +0000
-categories: java
+categories: jekyll
 tags: java javaagent
 ---
 
