--- a/_posts/2023-02-11-数据结构之lsm-tree.markdown
+++ b/_posts/2023-02-11-数据结构之lsm-tree.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "mysql之innodb"
+title:  "数据结构之lsm-tree"
 date:   2023-02-11 10:22:07 +0000
 categories: jekyll
-tags: mysql innodb
+tags: mysql lsm
 ---
 
 # usdt
