--- a/_posts/2023-02-11-系统调用之bpf.markdown
+++ b/_posts/2023-02-11-系统调用之bpf.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "性能优化之tracepoint"
+title:  "系统调用之bpf"
 date:   2023-01-29 10:22:07 +0000
 categories: jekyll
-tags: perf tracepoint
+tags: perf bpf
 ---
 
 # usdt
